--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ tiles-count: 6
 socials:
   GitHub: https://github.com/andrewbanchich
   GitLab:
-  Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
+  Google-Plus: 
   Instagram:
-  LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-  Twitter: https://twitter.com/andrewbanchich
+  LinkedIn: www.linkedin.com/in/joshua-allen-jones
+  Twitter: https://twitter.com/PipettuaJones
   Facebook:
   Slack:
 
