quotes around socials

--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ socials:
   GitLab:
   Google-Plus: 
   Instagram:
-  LinkedIn: www.linkedin.com/in/joshua-allen-jones
-  Twitter: https://twitter.com/PipettuaJones
+  LinkedIn: "www.linkedin.com/in/joshua-allen-jones"
+  Twitter: "https://twitter.com/PipettuaJones"
   Facebook:
   Slack:
 
