http to linkdin

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ socials:
   GitLab:
   Google-Plus: 
   Instagram:
-  LinkedIn: "www.linkedin.com/in/joshua-allen-jones"
+  LinkedIn: "https://www.linkedin.com/in/joshua-allen-jones/"
   Twitter: "https://twitter.com/PipettuaJones"
   Facebook:
   Slack:
