--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: JOSH Jones
 subtitle: Researcher of Complex Microbiomes
 email: jaj35@iu.edu
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/home" # the subpath of your site, e.g. /blog
 url: "https://complex-microbiome.github.io"
 author: Joshua Jones
 street_address: 
