Adding google Scholar link-maybe

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ socials:
   Instagram:
   LinkedIn: "https://www.linkedin.com/in/joshua-allen-jones/"
   Twitter: "https://twitter.com/PipettuaJones"
+  Google Scholar: https://scholar.google.com/citations?user=kb6WiPEAAAAJ&hl=en&authuser=1
   Facebook:
   Slack:
 
