--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ socials:
   Google-Plus: 
   Instagram:
   LinkedIn: "https://www.linkedin.com/in/joshua-allen-jones/"
-  Twitter: "https://twitter.com/PipettuaJones"
+  Twitter: 
   Google Scholar: https://scholar.google.com/citations?user=kb6WiPEAAAAJ&hl=en&authuser=1
   Facebook:
   Slack:
